welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:30: error: type mismatch;
 found   : Unit
 required: Boolean
		if (sens = 0)
                         ^